--- a/index.html
+++ b/index.html
@@ -27,43 +27,42 @@
             <tr>
                 <td align="center" bgcolor="#580368" style="padding: 0 0 0 0;">
                     <a href="https://hubs.ly/Q0131plk0">
-                    <img width="100%"
-                        src="https://user-images.githubusercontent.com/79061264/139165246-4054b124-5f25-4534-a6ce-05eda4c35ead.png"
-                        alt="Tech Talk on Open Source ThreatMapper" style="display: flex;" /></a>
+                        <img width="100%"
+                            src="https://user-images.githubusercontent.com/79061264/151449761-200712f5-03cd-44f8-a2c8-7667a67a53e8.png"
+                            alt="Tech Talk on Open Source ThreatMapper" style="display: flex;" /></a>
                 </td>
             </tr>
             <tr>
-                <td bgcolor="#ffffff" style="padding: 40px 30px 0px 30px;">
+                <td bgcolor="#ffffff" style="padding: 30px 30px 0px 30px;">
                     <table border="0" cellpadding="0" cellspacing="0" width="100%"
                         style="border-collapse: collapse; table-layout: fixed;">
                         <tr>
                             <td colspan="2"
                                 style="color: #153643; width: 100%; font-family: Arial, sans-serif; font-size: 16px; line-height: 24px; padding: 20px 0 30px 0;">
-                                <p style="margin: 0;">ThreatMapper is now open source! ThreatMapper is a cloud native
-                                    security observability platform that scans, maps, and ranks vulnerabilities in
-                                    running containers, images, hosts, and repositories. It discovers the threats to
-                                    your applications in production across clouds, Kubernetes, serverless, and more.<br><br><a
-                                        href="https://deepfence-io.zoom.us/webinar/register/9316353879667/WN_gz6_BtY3SeexzMorH6A_tw"
-                                        target="_blank">Join the live Tech Talk on Nov. 4 at 10 AM PT</a>.<br><br>In
-                                    less than 45 minutes you will learn how to:
+                                <p style="margin: 0;">ThreatMapper 1.2.0 is here! Join the live webinar on Feb. 3 at 10
+                                    AM PT to see the latest and greatest features in action. <a
+                                        href="https://hubs.ly/Q0131plk0">Register today.</a><br><br>In
+                                    just 30 minutes you will learn how
+                                    to:
                                 <ul>
-                                    <li>Visualize your running services, K8s pods, and third-party APIs</li>
-                                    <li>Discover vulnerabilities in production that were not known at build or deploy time</li>
-                                    <li>Prioritize and rank vulnerabilities by exploitability</li>
+                                    <li>Use the latest features in ThreatMapper, including Attack Path Visualization,
+                                        support for scanning AWS Fargate workloads, integration with Google Chronicle,
+                                        and ARM support that opens up threat mapping for IoT and Edge use cases</li>
+                                    <li>Pinpoint your most exploitable vulnerabilities in production so you can fix them
+                                        immediately</li>
                                     <li>And more</li>
                                 </ul>
                                 </p>
                             </td>
-                        </tr>  
+                        </tr>
                     </table>
                 </td>
             </tr>
-            <td bgcolor="#ffffff" style="padding: 10px 30px 60px 30px;">
+            <td bgcolor="#ffffff" style="padding: 10px 30px 0px 30px;">
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                     <tr>
                         <td align="center">
-                            <a href="https://deepfence-io.zoom.us/webinar/register/9316353879667/WN_gz6_BtY3SeexzMorH6A_tw"
-                                target="_blank"><img style="max-width: 100%"
+                            <a href="https://hubs.ly/Q0131plk0"><img style="max-width: 100%"
                                     src="https://user-images.githubusercontent.com/79061264/124685820-e0986600-de86-11eb-8810-1aa36ed022ec.png"
                                     alt="register button"></a>
                         </td>
@@ -71,11 +70,29 @@
                 </table>
             </td>
             <tr>
+                <td bgcolor="#ffffff" style="padding: 40px 30px 20px 30px;">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%"
+                        style="border-collapse: collapse; table-layout: fixed;">
+                        <tr>
+                            <td colspan="2"
+                                style="color: #153643; width: 100%; font-family: Arial, sans-serif; font-size: 16px; line-height: 24px; padding: 20px 0 30px 0;">
+                                <p style="margin: 0;">If you’re new to ThreatMapper, it’s the open source cloud native
+                                    security observability platform that hunts for vulnerabilities – including log4j2
+                                    and PwnKit – in your production platforms, and ranks them based on their risk of
+                                    exploit. From here, you can methodically address the issues that pose the greatest
+                                    risk to your applications.
+                                </p>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
                 <td bgcolor="#7d7d7d" style="padding: 30px 30px;">
                     <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                         <tr>
                             <td style="color: #ffffff; font-family: Arial, sans-serif; font-size: 14px;">
-                                <p style="margin: 0;">Tech talk hosted by Deepfence<br />
+                                <p style="margin: 0;">Webinar hosted by Deepfence<br />
                                     <a href="https://deepfence.io/privacy/" target="_blank"
                                         style="color: #ffffff;">Privacy Policy</a>
                                 </p>
